Chnage to use cloud MQTT broker
Signed-off-by: lenny <leonard.goodell@intel.com>

--- a/mqtt-configs/configuration.toml
+++ b/mqtt-configs/configuration.toml
@@ -60,7 +60,7 @@ File = "./device-mqtt.log"
   [DeviceList.Protocols]
     [DeviceList.Protocols.mqtt]
        Schema = "tcp"
-       Host = "192.168.12.2"
+       Host = "RRS-Rapid-ElasticL-Q3I1D93JN2JQ-325700436.us-west-2.elb.amazonaws.com"
        Port = "1883"
        ClientId = "edgex-mqtt-pos-command-pub"
        User = ""
@@ -88,7 +88,7 @@ File = "./device-mqtt.log"
   [DeviceList.Protocols]
     [DeviceList.Protocols.mqtt]
        Schema = "tcp"
-       Host = "192.168.12.2"
+       Host = "RRS-Rapid-ElasticL-Q3I1D93JN2JQ-325700436.us-west-2.elb.amazonaws.com"
        Port = "1883"
        ClientId = "edgex-mqtt-rfid-command-pub"
        User = ""
@@ -102,7 +102,7 @@ File = "./device-mqtt.log"
   [DeviceList.Protocols]
     [DeviceList.Protocols.mqtt]
        Schema = "tcp"
-       Host = "192.168.12.2"
+       Host = "RRS-Rapid-ElasticL-Q3I1D93JN2JQ-325700436.us-west-2.elb.amazonaws.com"
        Port = "1883"
        ClientId = "edgex-mqtt-roi-command-pub"
        User = ""
@@ -112,7 +112,7 @@ File = "./device-mqtt.log"
 # Driver configs
 [Driver]
 IncomingSchema = "tcp"
-IncomingHost = "192.168.12.2"
+IncomingHost = "RRS-Rapid-ElasticL-Q3I1D93JN2JQ-325700436.us-west-2.elb.amazonaws.com"
 IncomingPort = "1883"
 IncomingUser = ""
 IncomingPassword = ""
@@ -121,7 +121,7 @@ IncomingKeepAlive = "10"
 IncomingClientId = "edgex-mqtt-sub"
 IncomingTopic = "edgex"
 ResponseSchema = "tcp"
-ResponseHost = "192.168.12.2"
+ResponseHost = "RRS-Rapid-ElasticL-Q3I1D93JN2JQ-325700436.us-west-2.elb.amazonaws.com"
 ResponsePort = "1883"
 ResponseUser = ""
 ResponsePassword = ""
